[package]
name = "physics_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.1"
itertools = "0.10.1"
nannou = "0.17.1"

[patch.crates-io.wgpu]
git = "https://github.com/mitchmindtree/wgpu-rs"
branch = "0.8-as-0.9"
